added key for gmaps

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <title>LooCator</title>
     <link rel="icon" type="image/png" href="img/toiletlogo.png">
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDJXtSaRqVDtxgWE4Dh0EqvOLEsdYf_qV0"></script>
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
