--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- endinject -->
 </head>
 
-<body ng-controller="BathroomController as vm">
+<body ng-controller="BathroomController as vm" ng-cloak>
     <button type="button" class="btn btn-default closeButton shadow addButtonBlue" uib-popover="I appeared on mouse enter!" popover-trigger="mouseenter" title="Collapse the sidebar" ng-click="vm.buttonClick()" ng-show="vm.button" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
     <button type="button" class="btn btn-default closeButton shadow addButtonBlue" title="Expand the sidebar" ng-click="vm.buttonClick()" ng-show="!vm.button" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
     <button type="button" title="Back to the results" class="btn btn-default menuButton shadow addButtonBlue" aria-hidden="true" ng-show="vm.singleResult" ng-click="vm.backToResults()" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></button>
