--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,12 @@
     <!-- endinject -->
 </head>
 
-<body ng-controller="BathroomController as vm" ng-cloak>
-    <button type="button" class="btn btn-default closeButton shadow addButtonBlue" uib-popover="I appeared on mouse enter!" popover-trigger="mouseenter" title="Collapse the sidebar" ng-click="vm.buttonClick()" ng-show="vm.button" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+<body ng-controller="BathroomController as vm" ng-cloak resize>
+    <button type="button" class="btn btn-default closeButton shadow addButtonBlue" title="Collapse the sidebar" ng-click="vm.buttonClick()" ng-show="vm.button" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
     <button type="button" class="btn btn-default closeButton shadow addButtonBlue" title="Expand the sidebar" ng-click="vm.buttonClick()" ng-show="!vm.button" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
     <button type="button" title="Back to the results" class="btn btn-default menuButton shadow addButtonBlue" aria-hidden="true" ng-show="vm.singleResult" ng-click="vm.backToResults()" ng-class="{'fadeoutButton': vm.fade === true}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></button>
-    <!--      <button type="button" style="position: absolute; left: 700px; z-index: 105" ng-click="vm.test()">lkjkhjkahdjkahsdjkhajskhdjkashdjkahsdalknsdkasjdl</button>
- -->
-    <ng-map id="map" map-type-control="false" zoom-to-include-markers="auto">
+<!--     <button type="button" style="position: absolute; left: 700px; z-index: 105" ng-click="vm.test2()">lkjkhjkahdjkahsdjkhajskhdjkashdjkahsdalknsdkasjdl</button> -->
+    <ng-map id="map" map-type-control="false" zoom-to-include-markers="auto" ng-class="{'mapFadeOut': vm.fade === true}">
         <marker ng-repeat="bathroom in vm.bathrooms" position="{{bathroom.Latitude}},{{bathroom.Longitude}}" data="{{bathroom.Latitude}}" animation="Animation.DROP" title="{{bathroom.BathroomName}}" on-click="vm.toggleBounce(bathroom)" on-mouseover="vm.test()">
         </marker>
         <marker animation="Animation.DROP" position="{{vm.myLat}}, {{vm.myLng}}" title="Your searched location" optimized="false" icon="{
@@ -42,15 +41,15 @@
         <info-window id="yourLoc" max-width="200" ng-cloak>
             <div ng-non-bindable>
                 <div id="siteNotice"></div>
-                <p id="firstHeading" class="firstHeading">Your searched location</p>
+                <p id="firstHeading" class="firstHeading"></p>
                 <div id="bodyContent">
                 </div>
             </div>
         </info-window>
     </ng-map>
-    <div class="sidePanel shadow scroll" ng-cloak ng-class="{'fadeout': vm.fade === true}">
+    <div class="sidePanel shadow scroll" ng-cloak ng-class="{'fadeout': vm.fade === true}" ng-hide="vm.fade">
         <div id="LogoAndSearch">
-            <img src="img/toiletlogoyay.png" class="img-responsive">
+            <img src="img/toiletlogoyay.png" class="img-responsive logo">
             <form ng-submit="vm.search(vm.address)">
                 <div id="custom-search-input">
                     <div class="input-group col-md-12">
@@ -65,6 +64,7 @@
         <!-- comment -->
         <div ng-show="vm.results">
             <div id="results">
+                <button type="button" class="btn btn-default btn-block addButtonBlue xout" ng-click="vm.buttonClick()"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                 <div ng-repeat="bathroom in vm.bathrooms" ng-click="vm.selectResult(bathroom)">
                     <h5 class="pull-right" style="width: 60px"><span style="margin-top : -5px ; display: inline-block" class="glyphicon glyphicon-star"></span>  {{bathroom.StarRating}} ({{bathroom.Reviews.length}})</h5>
                     <h4 class="bathroomName" style="display: inline-block ; width: 210px">{{bathroom.BathroomName}}</h4>
@@ -108,6 +108,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="mobilePhoneResults">
+       <button type="button" class="btn btn-default btn-block addButtonBlue resultsButton" ng-click="vm.buttonClick()"><b>Back To Results</b></button>
     </div>
     <!-- line modal -->
     <div class="modal fade" style="z-index: 1001" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
@@ -550,6 +553,7 @@
     <script src="button.js"></script>
     <script src="controller.bathroom.js"></script>
     <script src="factory.bathroom.js"></script>
+    <script src="resize.directive.js"></script>
     <!-- endinject -->
     </div>
 </body>
