--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for..." ng-model="vm.address">
                     <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" ng-click="vm.search(vm.address)">Go!</button>
+                            <button class="btn btn-default" type="submit" ng-click="vm.search(vm.address)">Go!</button>
                         </span>
                 </div>
                 <!-- /input-group -->
@@ -42,7 +42,7 @@
         scaledSize:[22,40],
         origin: [0,0],
         anchor: [11,40]
-      }" on-click="map.showInfoWindow('yourLoc')"></marker>
+      }" "></marker>
         <info-window id="bar" max-width="200" ng-cloak>
             <div ng-non-bindable>
                 <div id="siteNotice"></div>
@@ -52,14 +52,14 @@
                 </div>
             </div>
         </info-window>
-        <info-window id="yourLoc" max-width="200" ng-cloak>
+<!--         <info-window id="yourLoc" max-width="200" ng-cloak>
             <div ng-non-bindable>
                 <div id="siteNotice"></div>
                 <p id="firstHeading" class="firstHeading"></p>
                 <div id="bodyContent">
                 </div>
             </div>
-        </info-window>
+        </info-window> -->
     </ng-map>
     <div class="sidePanel shadow scroll" ng-cloak ng-class="{'fadeout': vm.fade === true}" ng-hide="vm.fade">
         <div id="LogoAndSearch">
@@ -546,7 +546,7 @@
                             <button type="button" ng-click="vm.addB()" class="btn btn-default addButtonBlue" data-action="save" role="button" data-dismiss="modal">Save</button>
                         </div>
                         <div class="btn-group" role="group">
-                            <button type="button" ng-click="vm.addReview()" class="btn btn-default addButtonBlue" data-action="save" role="button" data-dismiss="modal" data-toggle="modal" data-target="#reviewModal">Save and Add Review</button>
+                            <button type="button" ng-click="vm.addReview()" class="btn btn-default addButtonBlue" data-action="save" role="button" data-dismiss="modal" data-toggle="modal" data-target="#reviewModal">Save & Review</button>
                         </div>
                     </div>
                 </div>
