--- a/app/index.html
+++ b/app/index.html
@@ -540,13 +540,13 @@
                 <div class="modal-footer">
                     <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default addButtonBlue" data-dismiss="modal" role="button">Close</button>
+                            <button type="button" class="btn btn-default addButtonBlue smallText" data-dismiss="modal" role="button">Close</button>
                         </div>
                         <div class="btn-group" role="group">
-                            <button type="button" ng-click="vm.addB()" class="btn btn-default addButtonBlue" data-action="save" role="button" data-dismiss="modal">Save</button>
+                            <button type="button" ng-click="vm.addB()" class="btn btn-default addButtonBlue smallText" data-action="save" role="button" data-dismiss="modal">Save</button>
                         </div>
                         <div class="btn-group" role="group">
-                            <button type="button" ng-click="vm.addReview()" class="btn btn-default addButtonBlue" data-action="save" role="button" data-dismiss="modal" data-toggle="modal" data-target="#reviewModal">Save & Review</button>
+                            <button type="button" ng-click="vm.addReview()" class="btn btn-default addButtonBlue smallText" data-action="save" role="button" data-dismiss="modal" data-toggle="modal" data-target="#reviewModal">Save & Review</button>
                         </div>
                     </div>
                 </div>
