fixed text areas

--- a/app/index.html
+++ b/app/index.html
@@ -176,7 +176,7 @@
                         <div class="row">
                             <form role="form" class="go-right">
                                 <div class="form-group">
-                                    <input id="name" name="name" type="text" class="form-control" ng-model="vm.bathroomToAdd.name" required>
+                                    <input id="name" type="text" class="form-control" ng-model="vm.bathroomToAdd.name" required>
                                     <label for="name">Name of Bathroom</label>
                                 </div>
                                 <div class="form-group">
@@ -530,7 +530,7 @@
                                     </span>
                                 </div>
                                 <div class="form-group">
-                                    <textarea id="message" name="phone" class="form-control" ng-model="vm.bathroomToAdd.directions" required></textarea>
+                                    <textarea id="message" class="form-control" ng-model="vm.bathroomToAdd.directions" required></textarea>
                                     <label for="message">Comments</label>
                                 </div>
                             </form>
