height of search mobile

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for..." ng-model="vm.address">
-                    <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit" ng-click="vm.search(vm.address)">Go!</button>
+                    <input type="text" class="form-control keyboardFix" placeholder="Search for..." ng-model="vm.address">
+                    <span class="input-group-btn sib">
+                            <button class="btn btn-default sib" type="submit" ng-click="vm.search(vm.address)">Go!</button>
                         </span>
                 </div>
                 <!-- /input-group -->
